--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Dictionary App</title>
+     <link rel="icon" href="logo.png" type="image/x-icon">
+    <title>Vocab Doctor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -11,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-book-open"></i> LexiLearn</h1>
+            <h1><i class="fas fa-book-open"></i> VocabDoctor</h1>
             <p>Your comprehensive English learning companion</p>
             
             <div class="search-container">
@@ -134,7 +135,7 @@
             <!-- Dictionary Content Section -->
             <section class="dictionary-content" id="dictionary-content">
                 <div class="content-header">
-                    <h2 id="content-title">Welcome to LexiLearn</h2>
+                    <h2 id="content-title">Welcome to vocabDoctor</h2>
                     <button id="back-btn" class="hidden"><i class="fas fa-arrow-left"></i> Back</button>
                 </div>
                 <div class="content-body" id="content-body">
@@ -149,7 +150,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2023 LexiLearn Dictionary App. All rights reserved.</p>
+            <p>&copy; 2025 VocabDoctor Dictionary App. All rights reserved.</p>
             <div class="footer-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
