--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-book-open"></i> VocabDoctor</h1>
+            <div class="header-container">
+  <h1 class="site-title">
+    <span class="title-wrapper">
+      <img src="logo.png" alt="Logo" class="logo">
+      VocabDoctor
+    </span>
+  </h1>
+</div>
             <p>Your comprehensive English learning companion</p>
             
             <div class="search-container">
