--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <!-- Daily Use Sentences -->
-                <div class="category-card" data-category="sentences">
+                <div class="category-card" data-category="daily-sentences">
                     <div class="icon-container">
                         <i class="fas fa-language"></i>
                     </div>
