Update index.html by adding antonyms

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                     <h3>Verbs</h3>
                     <p>Action words with meanings and examples</p>
                 </div>
+                <div class="category-card" data-category="antonyms">
+                    <div class="icon-container">
+                        <i class="fas fa-running"></i>
+                    </div>
+                    <h3>Antonyms</h3>
+                    <p>Action words with meanings and examples</p>
+                </div>
 
                 <!-- Idioms -->
                 <div class="category-card" data-category="idioms">
@@ -168,4 +175,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
